# t1d-analytics

./: .gitignore  DEPLOY.md  Makefile  README.md  USAGE.md  alpine.backend.Dockerfile  alpine.frontend.Dockerfile  ci_test.duckdb  coverage.json  docker-compose.yml  libscript.json  make.bat  pyproject.toml  requirements-dev.txt  requirements.txt  test.cmd  test.sh
.github/workflows/: ci.yml
scripts/: pre-commit.sh
src/t1d_analytics/: __init__.py  analytics.py  api.py  cli.py  downloader.py  likely_matches.json  models.py  parser.py
tests/: test_analytics.py  test_api.py  test_cli.py  test_downloader.py  test_models.py  test_parser.py
web/: .prettierignore  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
web/src/: i18n.ts  main.ts  state.ts  style.css  ui.ts
web/tests/: i18n.test.ts  main.test.ts  setup.ts  state.test.ts  ui.test.ts
web/tests-e2e/: chat.spec.ts
