[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "t1d-analytics"
version = "0.1.0"
description = "Downloader and analytics suite for T1D public datasets"
authors = [{name = "Samuel"}]
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["dependencies"]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[project.scripts]
t1d-analytics = "t1d_analytics.cli:main"

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "I", "D"]
lint.ignore = ["D203", "D212", "E501"]

[tool.mypy]
strict = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
addopts = "--cov=t1d_analytics --cov-report=term-missing --cov-report=html --cov-fail-under=100"
pythonpath = ["src"]